vcl/inc/win/saldata.hxx
@@ -111,7 +111,6 @@ public:
     bool                    mbObjClassInit;         // is SALOBJECTCLASS initialised
     bool                    mbInPalChange;          // is in WM_QUERYNEWPALETTE
     DWORD                   mnAppThreadId;          // Id from Application-Thread
-    BOOL                    mbScrSvrEnabled;        // ScreenSaver enabled
     SalIcon*                mpFirstIcon;            // icon cache, points to first icon, NULL if none
     TempFontItem*           mpSharedTempFontItem;   // LibreOffice shared fonts
     TempFontItem*           mpOtherTempFontItem;    // other temporary fonts (embedded?)
